--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,15 +15,25 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.5",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.19",
+    "@mui/joy": "^5.0.0-beta.17",
+    "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@mui/x-charts": "^6.18.3",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "heroicons": "^2.0.18",
+    "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.1",
     "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
