--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -1,10 +1,18 @@
+
 {
+  
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    // "paths": {
+          //  "@mui/material": ["./node_modules/@mui/joy"]
+        //  },
+
+    "noFallthroughCasesInSwitch": true,
+    "noEmitOnError": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -13,12 +21,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "allowJs": true,
+ 
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+   
+
+    
+
+    
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
