--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "force-start": "TSX_COMPILE_ON_ERROR=true ESLINT_NO_DEV_ERRORS=true react-scripts start",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -16,11 +17,12 @@
     "@material-tailwind/react": "^2.1.5",
     "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.17",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@mui/x-charts": "^6.18.3",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "heroicons": "^2.0.18",
