--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -23,15 +23,10 @@
     "jsx": "react-jsx",
     "allowJs": true,
  
-
     /* Linting */
     "strict": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-   
-
-    
-
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     
   },
   "include": ["src"],
