--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@mui/x-charts": "^6.18.3",
+    "dotenv": "^16.3.1",
     "react-swipeable-views": "^0.14.0",
     "styled-components": "^6.1.1"
   }
